Some refactorings and rewriting
git-svn-id: svn://localhost/jahia/trunk@3080 69c369ed-ed09-0410-a4a1-e19a46c23626